--- a/index/index.html
+++ b/index/index.html
@@ -12,10 +12,10 @@
         <div id="menu">
         <nav id="navMENU">
             <ul id="ulMENU">
-                <li><a href="#home">Página inicial</a></li>
-                <li><a href="#marcasParceiras">Marcas Envolvidas</a></li>
-                <li><a href="#carros">Carros</a></li>
-                <li><a href="#sobre">Sobre Aurora</a></li>  
+                <li><a href="#home">Home</a></li>
+                <li><a href="#marcas">Marcas</a></li>
+                <li><a href="#modelos">Modelos</a></li>
+                <li><a href="#sobre">Sobre</a></li>  
                 <li><a href="#contato">Contato</a></li>         
             </ul>
           </nav>
@@ -24,30 +24,19 @@
           </a>
 
         </div>
+
         
-        <div id="middle">  
-            <h1 id="h1Middle">AURORA</h1>
+
+        <div id="middle"> 
+
         </div>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum at velit excepturi porro quibusdam, ex laudantium aliquid possimus molestiae tenetur quaerat sint corporis? Harum, assumenda numquam quas facilis impedit dolorum?
-        Placeat maxime quasi sequi facilis ea voluptates. Accusantium magnam consectetur velit iusto nostrum corrupti porro sunt nisi perferendis officiis ad distinctio esse vero, explicabo incidunt reiciendis in magni itaque assumenda.
-        Molestias, nulla veritatis adipisci ratione doloribus atque, expedita hic quasi, corrupti ipsum odio sed? Quod dicta eligendi velit, eos praesentium dolor totam unde qui voluptate alias maiores laboriosam nemo! Doloribus.
-        Laudantium similique ducimus illo, optio sapiente hic quaerat temporibus corrupti rem qui, est et. Hic at vel non. Sit aperiam possimus commodi adipisci hic tempore doloremque repellendus et, odit maxime.
-        Rem nam, pariatur exercitationem ratione aliquid est, cum officia nihil nulla at fugit sed error eius iure quisquam mollitia fugiat blanditiis rerum? Aliquid vero autem laboriosam unde impedit earum odio.
-        Tempora culpa molestias harum sequi quo voluptatem esse, consequuntur voluptas, dicta ex quisquam iste excepturi perspiciatis? Corrupti velit vel tempora aspernatur suscipit, ea totam laudantium aut sequi praesentium voluptas molestiae.
-        Esse iste pariatur, aspernatur architecto impedit officia. Natus, sunt! Quaerat perferendis exercitationem quia quo aliquid sequi reiciendis necessitatibus architecto! Tempora non consequuntur totam earum aliquam, ullam praesentium illum assumenda sapiente?
-        Accusantium dolores debitis possimus similique reiciendis laboriosam, ab modi temporibus sunt maxime praesentium veritatis molestias doloribus iure. Molestias pariatur est itaque, aliquid aliquam libero, laudantium explicabo obcaecati eligendi voluptates quae?
-        Officia ut molestias repellat culpa natus nihil ipsum nisi facere nemo facilis amet commodi consequuntur voluptates, ratione distinctio explicabo ipsam quasi quo et accusamus. Expedita in delectus maiores deserunt ad.
-        Reprehenderit, maiores quos sunt quas placeat et ex nobis voluptas quod dolore iste illum est doloremque, suscipit reiciendis nihil necessitatibus dolorem maxime officiis eum. Accusamus officiis labore eum possimus pariatur.
-        Provident quae sed culpa itaque a est quaerat laborum ipsa laudantium sequi reprehenderit, doloribus consequatur minus ea ratione blanditiis deleniti beatae iusto quod quisquam in dolor natus. Vero, impedit quas?
-        Debitis iure nulla earum harum necessitatibus libero ea! Eum tempora odit in quibusdam explicabo quaerat sequi quasi ullam sed enim. Dignissimos illum distinctio cupiditate itaque quia doloremque qui enim atque!
-        Et iusto est dolorum excepturi aut porro quas tempora soluta modi, voluptate nemo sit ut maxime molestiae, ipsum fuga maiores aspernatur voluptates. Enim ab natus deleniti, dolorum cupiditate omnis impedit?
-        Odit repudiandae architecto dolores reiciendis nesciunt? Autem quidem dolore, deleniti non aliquam adipisci quis ad dolor dolores accusamus odit doloremque. Commodi aliquam tempora sapiente fugiat recusandae officiis. Tenetur, in cupiditate?
-        Pariatur recusandae aliquam non ratione adipisci fuga assumenda, esse sapiente nobis suscipit tempora ad tenetur rerum cupiditate iusto quasi qui expedita nam doloremque numquam voluptatibus eveniet voluptatem? Vero, libero tenetur!</p>
+
+        <h1><img src="../images/aurora logo.png" alt="Logo Aurora" id="logoAuroraMenu" id="h1Middle"></h1>
+
     </header>
 
 
     <main> <!--CONTEUDO PRINCIPAL-->
-        <p>lorem*15</p>
     </main>
 
 
