--- a/index/index.html
+++ b/index/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exemplo Site</title>
     <link rel="stylesheet" href="../style/style.css">
+    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <header> <!--CABEÇALHO-->
@@ -19,10 +20,9 @@
                 <li><a href="#contato">Contato</a></li>         
             </ul>
           </nav>
-          <a href="#sobre">   
-              <h1><img src="../images/aurora logo.png" alt="Logo Aurora" id="logoAuroraMenu"></h1>
+          <a href="#sobre" id="linkMENU">   
+              <h1 id="h1MENU">AURORA</h1>
           </a>
-
         </div>
 
         
@@ -31,7 +31,10 @@
 
         </div>
 
-        <h1><img src="../images/aurora logo.png" alt="Logo Aurora" id="logoAuroraMenu" id="h1Middle"></h1>
+        <a href="#modelos">
+            <h1 class="middle"">AURORA</h1>  
+        </a>
+
 
     </header>
 
