--- a/index/index.html
+++ b/index/index.html
@@ -31,7 +31,7 @@
 
         </div>
 
-        <a href="#modelos">
+        <a href="#modelos" id="linkMIDDLE">
             <h1 class="middle"">AURORA</h1>  
         </a>
 
