--- a/index/index.html
+++ b/index/index.html
@@ -16,7 +16,8 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#marcas">Marcas</a></li>
                 <li><a href="#modelos">Modelos</a></li>
-                <li><a href="#sobre">Sobre</a></li>  
+                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="index2.html">Cadastrar</a></li>  
                 <li><a href="#contato">Contato</a></li>         
             </ul>
           </nav>
@@ -30,9 +31,10 @@
         <div id="middle"> 
 
         </div>
+        
         <section id="home">
             <a href="#modelos" id="linkMIDDLE">
-                <h1 class="middle"">AURORA</h1>  
+                <h1 class="middle">AURORA</h1>  
             </a>
         </section>
     </header>
