--- a/index/index2.html
+++ b/index/index2.html
@@ -1,29 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CRUD</title>
+  <title>Aurora Project Register</title>
   <link rel="stylesheet" href="../style/style2.css">
+  <link rel="stylesheet" href="../style/styleMenuCadastro.css">
   <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
-  <div class="container">
+  <div class="classMenu" id="menu">
+    <nav id="navMENU">
+        <ul id="ulMENU">
+            <li><a href="index.html" target="_self">Home</a></li>
+            <li><a href="index3.html" target="_self">Modelos</a></li>           
+        </ul>
+      </nav>
+        <a href="index.html" id="linkMENU">   
+            <h1 id="h1MENU">AURORA</h1>
+        </a>
+    </div>
+
+<div class="divBody">
+ <div class="container">
     <div class="header">
-      <span>Cadastro de Funcionários</span>
-      <button onclick="openModal()" id="new">Incluir</i></button>
+      <span>Cadastro de Carros</span>
+      
+      <button onclick="openModal()" id="new">Cadastrar</button>
+    
+      <button id="new"><a href="index.html" id="cancelar">Cancelar</a></button>
     </div>
 
     <div class="divTable">
       <table>
         <thead>
           <tr>
-            <th>Nome</th>
-            <th>Função</th>
-            <th>Salário</th>
+            <th>Marca</th>
+            <th>Modelo</th>
+            <th>Valor</th>
             <th class="acao">Editar</th>
             <th class="acao">Excluir</th>
           </tr>
@@ -36,20 +53,22 @@
     <div class="modal-container">
       <div class="modal">
         <form>
-          <label for="m-nome">Nome</label>
+          <label for="m-nome">Marca</label>
           <input id="m-nome" type="text" required />
   
-          <label for="m-funcao">Função</label>
+          <label for="m-funcao">Modelo</label>
           <input id="m-funcao" type="text" required />
   
-          <label for="m-salario">Salário</label>
+          <label for="m-salario">Valor</label>
           <input id="m-salario" type="number" required />
           <button id="btnSalvar">Salvar</button>
         </form>
       </div>
     </div>
-
   </div>
+
+  </div>    
+
   <script src="../scripts/script.js"></script>
 </body>
 
