--- a/index/index2.html
+++ b/index/index2.html
@@ -53,14 +53,14 @@
     <div class="modal-container">
       <div class="modal">
         <form>
-          <label for="m-nome">Marca</label>
-          <input id="m-nome" type="text" required />
+          <label for="m-marca">Marca</label>
+          <input id="m-marca" type="text" required />
   
-          <label for="m-funcao">Modelo</label>
-          <input id="m-funcao" type="text" required />
+          <label for="m-modelo">Modelo</label>
+          <input id="m-modelo" type="text" required />
   
-          <label for="m-salario">Valor</label>
-          <input id="m-salario" type="number" required />
+          <label for="m-valor">Valor</label>
+          <input id="m-valor" type="number" required />
           <button id="btnSalvar">Salvar</button>
         </form>
       </div>
