--- a/index/index.html
+++ b/index/index.html
@@ -14,6 +14,7 @@
         <nav id="navMENU">
             <ul id="ulMENU">
                 <li><a href="#home">Home</a></li>
+                <li><a href="#video">Apresentação</a></li>
                 <li><a href="#marcas">Marcas</a></li>
                 <li><a href="#modelos">Modelos</a></li>
                 <li><a href="#sobre">Sobre</a></li>
@@ -41,28 +42,23 @@
 
 
     <main> <!--CONTEUDO PRINCIPAL-->
+
+        <section id="video">
+        <h1 id="h1Video">THIS IS...</h1>
+            <div id="editVideo">
+                <video src="../video/Aurora Apresentation.mp4" controls width="700px"  autoplay loop></video>
+            </div>
+        </section>
+
+
         <section id="marcas">
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, labore quibusdam. Veritatis, soluta impedit aliquid repudiandae nihil dignissimos rem suscipit ab libero! Quisquam assumenda commodi delectus exercitationem fugit voluptas esse?
-                Adipisci molestias quis, laborum praesentium placeat vero modi dolor. Tenetur, ipsam totam dolorum similique officia dolor. Corporis tempore maxime quis error vero suscipit perspiciatis ea deserunt corrupti, tenetur dolores. Officia.
-                Eum minus obcaecati eaque illo dolores inventore nisi iusto quasi praesentium similique aperiam corrupti consequatur rerum impedit dolorem, eius hic molestias modi vero iure alias ex in atque sunt. Inventore.
-                Fugiat perspiciatis, illo consequuntur totam a, molestias iste in, est eos veniam earum rem adipisci. Ullam, ducimus. Nobis eius eum harum cum. Praesentium, vero expedita provident sint tempora voluptatibus impedit?
-                Voluptates eveniet, ut distinctio voluptatem at recusandae vero nulla adipisci ex ipsa cumque minus eum quasi et, autem ipsum reiciendis. Suscipit libero perferendis architecto nemo deleniti accusamus, voluptates dignissimos vel.
-                Nisi placeat aperiam aspernatur id neque voluptatem nam odit fugit, nesciunt voluptatum voluptate facilis, voluptates facere veritatis. Atque eligendi, eveniet neque iusto modi explicabo impedit adipisci mollitia nulla! Soluta, magnam.
-                Molestiae fuga enim hic maxime doloremque reiciendis exercitationem ad, nisi blanditiis quidem tempore itaque illum quos quis! Harum voluptatibus recusandae assumenda quas nemo nesciunt id, magni temporibus beatae neque odit.
-                Praesentium possimus dolores perspiciatis provident eos, numquam ut doloremque consequuntur aut vero accusamus unde, doloribus voluptates officiis delectus ab laudantium illum nulla laborum itaque esse. In nulla eveniet assumenda incidunt.
-                Blanditiis, animi laboriosam perferendis illo porro modi officiis incidunt dolore delectus suscipit eum, aspernatur facere tempore numquam nihil rem et. Repellat voluptas ullam suscipit iusto minus. Aspernatur magni eveniet quam.
-                Tenetur aspernatur nam iusto fugit voluptatem fugiat dolorem maxime dolor amet repudiandae culpa facilis at illum quam, ipsam beatae sint eius laboriosam quidem assumenda vitae consectetur? Voluptates labore magni unde?
-                Repudiandae numquam corrupti iste deserunt consequuntur dignissimos repellendus excepturi repellat soluta voluptas hic laudantium, ex veritatis, dolor expedita laborum natus provident. Neque eligendi saepe aliquid nesciunt, vitae quaerat amet modi.
-                Odit, cupiditate. Corporis officiis asperiores quia veniam repellendus labore enim minima perferendis odio voluptates ad quos cumque, numquam quae delectus, ex voluptas blanditiis laborum unde at excepturi eum consequatur veritatis!
-                Ex, asperiores aut omnis, excepturi quis numquam similique sequi dicta sed voluptatum quisquam debitis veniam ut unde. Voluptate quas ullam corrupti iste omnis unde at atque nulla, ea dignissimos incidunt.
-                Magnam nobis alias vero quam quas provident dolore accusamus, quisquam id voluptate, suscipit laboriosam et tempore laudantium quibusdam perspiciatis odio delectus ipsam. Amet exercitationem, numquam magnam laboriosam voluptatum totam neque!
-                Cumque magni pariatur nulla assumenda, quasi illo aut repellendus vitae nobis, asperiores est optio laboriosam delectus nesciunt impedit. Nam vero aut non quod delectus consequatur voluptatibus magnam est incidunt itaque.
-                Aliquam similique ex consequuntur doloremque tempore quidem, voluptatibus rem sed nam, quaerat, unde dolorem voluptas eos cumque velit pariatur reprehenderit labore sapiente quia! Assumenda adipisci, ipsum officia ad quo optio.
-                Nobis facere quos voluptatem nesciunt cumque tempora praesentium distinctio assumenda repellendus laboriosam, laborum accusamus, iusto eligendi. Totam possimus voluptates incidunt provident hic ipsum, natus quaerat fugit sed facilis in dignissimos?
-                Labore doloribus, dolores fuga totam, accusantium praesentium, nulla eius ipsa optio tenetur libero quos. Pariatur, quasi cum quisquam sunt iste illum aliquam dolorem. Iusto ratione rem distinctio blanditiis? Vel, pariatur.
-                Repudiandae voluptates nesciunt perferendis, delectus, temporibus quisquam nihil, sunt impedit magni nam neque officia quod recusandae sed modi laboriosam sit adipisci deserunt ex explicabo ratione enim quam ipsa. Minima, reprehenderit.
-                Est voluptate odit facere nisi ipsam minus autem voluptas maxime omnis eius quisquam dolor praesentium, illum veniam officia doloremque saepe, voluptates, esse perspiciatis. Maiores dolor magnam labore eum sapiente aperiam!</p>
+            <h1 id="h1Video">MARCAS</h1>
+                <div id="editMarcas">
+                    <div>
+                        <img src="../images/Modelos dos carros/Marcas/1a linha/Ferrari.png" alt="">
+                    </div>
+                </div>
             </div>
         </section>
 
