--- a/index/index.html
+++ b/index/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <header> <!--CABEÇALHO-->
-        <div id="menu">
+        <div class="realMenu">
+                    <div id="menu">
         <nav id="navMENU">
             <ul id="ulMENU">
                 <li><a href="#home">Home</a></li>
@@ -26,6 +27,8 @@
                 <h1 id="h1MENU">AURORA</h1>
             </a>
         </div>
+        </div>
+
 
         
 
@@ -44,7 +47,7 @@
     <main> <!--CONTEUDO PRINCIPAL-->
 
         <section id="video">
-        <h1 id="h1Video">THIS IS...</h1>
+        <h1 class="h1Video">THIS IS...</h1>
             <div id="editVideo">
                 <video src="../video/Aurora Apresentation.mp4" controls width="700px"  autoplay loop></video>
             </div>
@@ -53,12 +56,62 @@
 
         <section id="marcas">
             <div>
-            <h1 id="h1Video">MARCAS</h1>
+            <h1 class="h1Video">MARCAS PARCEIRAS</h1>
                 <div id="editMarcas">
-                    <div>
-                        <img src="../images/Modelos dos carros/Marcas/1a linha/Ferrari.png" alt="">
+                    <div class="primeiraLinha">
+                        <img src="../images/Modelos dos carros/Marcas/1a linha/Ferrari.png" alt="Ferrari" class="tamanhoImagem" id="Ferrari">
+                        <img src="../images/Modelos dos carros/Marcas/1a linha/Lamborghini.png" alt="Lamborghini" class="tamanhoImagem" id="Lamborghini">
+                        <img src="../images/Modelos dos carros/Marcas/1a linha/McLaren.png" alt="McLaren" class="tamanhoImagem" id="McLaren">
+                        <img src="../images/Modelos dos carros/Marcas/1a linha/Porsche.png" alt="Porsche" class="tamanhoImagem" id="Porsche">
                     </div>
+
+                    <div class="segundaLinha">
+                        <img src="../images/Modelos dos carros/Marcas/2a linha/Audii.PNG" alt="Audi" class="tamanhoImagem" id="Audi">
+                        <img src="../images/Modelos dos carros/Marcas/2a linha/BMWW.PNG" alt="BMW" class="tamanhoImagem" id="BMW">
+                        <img src="../images/Modelos dos carros/Marcas/2a linha/Mercedez Benzz.PNG" alt="Mercedes Benz" class="tamanhoImagem" id="MercedesBenz">
+                        <img src="../images/Modelos dos carros/Marcas/2a linha/Teslaa.PNG" alt="Tesla" class="tamanhoImagem" id="Tesla">
+                    </div>
+
+                    <div class="terceiraLinha">
+                        <img src="../images/Modelos dos carros/Marcas/3a linha/Bugattii.PNG" alt="Bugatti" class="tamanhoImagem" id="Bugatti">
+                        <img src="../images/Modelos dos carros/Marcas/3a linha/Land Roverr.PNG" alt="Land Rover" class="tamanhoImagem" id="LandRover">
+                        <img src="../images/Modelos dos carros/Marcas/3a linha/Maseratii.PNG" alt="Maseratti" class="tamanhoImagem" id="Maserati">
+                        <img src="../images/Modelos dos carros/Marcas/3a linha/Nissan.PNG" alt="TNissan" class="tamanhoImagem" id="Nissan">
+                    </div>
+
+                    <div class="quartaLinha">
+                        <img src="../images/Modelos dos carros/Marcas/4a linha/Aston martin.png" alt="Aston Martin" class="tamanhoImagem" id="AstonMartin">
+                        <img src="../images/Modelos dos carros/Marcas/4a linha/Jaguarr.PNG" alt="Jaguar" class="tamanhoImagem" id="Jaguar">
+                        <img src="../images/Modelos dos carros/Marcas/4a linha/Jeep.png" alt="Jeep" class="tamanhoImagem" id="Jeep">
+                        <img src="../images/Modelos dos carros/Marcas/4a linha/Rolls Roycee.PNG" alt="Rolls Royce" class="tamanhoImagem" id="RollsRoyce">
+                    </div>
+
                 </div>
+            </div>
+        </section>     
+
+        <section id="sobre">
+            <div>
+                <div>
+                    <h1 class="h1Video">SOBRE</h1>
+                        <div class="comumText" id="editSobre">
+                            <div class="esquerda">
+                                                             <h2 id="esquerda">Passado</h2>
+                            <p>Aurora é sinônimo de elegância, pureza e sofisticação, isso explica o seu nome. Totalmente reformulada, chegamos para revolucionar o mundo dos carros esportivos de luxo. Aurora projects é a sua conexão com o passado, presente e o seu passo futuro.</p> 
+                            </div>
+
+                            <div class="direita">
+                                <h2 id="direita">Presente</h2>
+                                <p>Um dos fenômenos mais incríveis e belos do planeta, Aurora é a entrada para a próxima revolução tecnológica. Não tenha medo, o futuro te espera. </p>
+                            </div>
+
+                            <div class="esquerda">
+                              
+                            <h2 id="">Futuro</h2>
+                            <p>E aqui estamos, já tomou a sua decisão? Pegue a nossa mão, te guiaremos pelas estradas da tecnologia. Welcome to the future !</p>  
+                            </div>
+
+                        </div>
             </div>
         </section>
 
@@ -87,30 +140,7 @@
             </div>
         </section>
 
-        <section id="sobre">
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex officiis at tempore expedita nobis ipsam fuga minima quas aut est ipsum necessitatibus nulla a quasi repellendus, odit magnam illo laboriosam.
-                Tempora quod similique ab expedita, minima ipsa optio? Commodi, minima. Iure ducimus excepturi debitis libero! Quod optio voluptatibus dolor. Molestiae at minus quibusdam eos soluta nemo omnis rerum. Necessitatibus, assumenda.
-                Eius nam quisquam quidem eaque, fuga quos veritatis dignissimos consequatur consequuntur atque rerum quod repellendus corrupti officiis tenetur provident quam voluptatibus exercitationem quae? Eius beatae maiores nostrum blanditiis maxime vel!
-                Veritatis, mollitia optio! Nesciunt inventore aliquam eos in atque qui totam eveniet odio quaerat sit, ratione eligendi! Nesciunt atque, id beatae itaque, vel numquam eligendi libero nobis ab, doloremque tempore.
-                Delectus et illo quisquam quaerat corporis, minus accusamus, dolore architecto aperiam iusto odio dicta nesciunt beatae fugiat autem debitis deleniti laboriosam similique tempore. Nam, reprehenderit repellat? Sed nihil a cum.
-                Maxime consequatur vitae ex consequuntur, natus dignissimos vel saepe commodi est perferendis eos debitis tempore, molestias exercitationem nisi facilis quisquam obcaecati cumque eaque corrupti assumenda dolorem odit deserunt excepturi. Tenetur.
-                Ipsam tempora fuga, nostrum debitis dolore pariatur voluptate ipsa quasi id velit quibusdam perferendis asperiores accusamus distinctio obcaecati impedit a perspiciatis culpa reprehenderit nisi molestiae? In mollitia aspernatur placeat quibusdam!
-                Odit reprehenderit eligendi minus, saepe non itaque ipsum sequi doloremque voluptatem porro corporis? Nemo tempore tempora quod, fuga veniam obcaecati enim rerum sapiente atque quas debitis odit quo provident reiciendis.
-                Enim minima odio provident laborum nemo. Amet voluptas doloribus quasi exercitationem assumenda cumque iste nam, fugit dolores quaerat, consequatur in aliquid, nemo reiciendis molestias sequi animi dolorem reprehenderit impedit! Autem.
-                Assumenda, molestias! Quidem officiis enim architecto optio aliquam dolorum expedita laborum at, veritatis vero explicabo dolorem autem harum consequuntur, porro eius nisi fuga facilis quisquam, libero animi sapiente. Magnam, consequatur!
-                Sit, exercitationem. Asperiores qui maiores eum a aut expedita, quos quisquam ut aliquid debitis, cum, veritatis temporibus nesciunt non iusto ipsam quis modi? Debitis illum et culpa itaque veritatis asperiores.
-                A delectus minima consequatur adipisci velit vero quisquam esse, quo dolor deleniti rem nam laudantium alias aperiam aspernatur atque. Nemo possimus nobis maiores aliquid totam? Cumque, beatae provident? Enim, explicabo.
-                Praesentium voluptatum ea, qui nihil ab, facilis placeat odio expedita cupiditate inventore laudantium obcaecati numquam nulla eum itaque. Quos voluptatum nobis iste animi asperiores quo dolor inventore at dolorem error.
-                Modi eos totam doloribus consectetur itaque odit ratione impedit. Amet iure quis voluptatem magni incidunt ipsa aliquam a magnam repudiandae ullam doloremque eum culpa, illo hic. Necessitatibus fuga aut odit.
-                Voluptate sapiente culpa cumque impedit modi? Eveniet suscipit modi corrupti repellat amet omnis maxime consectetur ducimus non atque! Est iusto quod illum mollitia quisquam nesciunt odio? Non a eius molestias?
-                Porro, blanditiis quisquam. Vel libero delectus illum dicta dolor? Molestias eum eaque iusto a minus molestiae! Provident perferendis placeat delectus consequatur facere eligendi, dignissimos, minima neque aspernatur atque, consequuntur enim.
-                Eius perferendis fuga laboriosam eum sint nostrum nesciunt consequatur maxime culpa eos labore, laudantium porro saepe mollitia facere quis similique voluptate doloribus molestiae cupiditate nemo. Sed eveniet aliquid tenetur culpa.
-                Facilis quos alias sunt deleniti minima excepturi velit asperiores nesciunt reprehenderit quisquam et laboriosam officia iste distinctio provident dicta, itaque non. Veniam totam perspiciatis dolorum illum hic accusantium omnis natus.
-                Sunt, sequi. Doloremque id soluta molestias odit voluptas facilis asperiores ut excepturi. Porro vitae dolor eum quam consequuntur obcaecati, eveniet, nostrum voluptas voluptates facilis autem molestiae voluptate, in rerum magni!
-                Sunt officiis iusto in quidem debitis facere ut distinctio quos saepe laudantium, laborum animi repudiandae eligendi minus natus vel repellat beatae possimus quasi quae. Porro asperiores architecto nam laborum ipsa!</p>
-            </div>
-        </section>
+
     </main>
 
 
