--- a/index/index.html
+++ b/index/index.html
@@ -51,7 +51,7 @@
         <section id="video">
         <h1 class="h1Video">THIS IS...</h1>
             <div id="editVideo">
-                <video src="../video/Aurora Apresentation.mp4" controls width="700px"  autoplay loop></video>
+                <video src="../video/Aurora Apresentation.mp4" autoplay loop controls width="700px"></video>
             </div>
         </section>
 
