--- a/index/index.html
+++ b/index/index.html
@@ -15,7 +15,7 @@
         <div class="realMenu">
                     <div id="menu">
         <nav id="navMENU">
-            <ul id="ulMENU">
+            <ul class="menu menu1">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#video">Apresentação</a></li>
                 <li><a href="#marcas">Marcas</a></li>
@@ -128,24 +128,37 @@
 
         <section id="sobre">
             <div>
-                <div>
+                <div class="sobreTudo">
                     <h1 class="h1Video">SOBRE</h1>
                         <div class="comumText" id="editSobre">
                             <div class="esquerda">
-                                                             <h2 id="esquerda">Passado</h2>
-                            <p>Aurora é sinônimo de elegância, pureza e sofisticação, isso explica o seu nome. Totalmente reformulada, chegamos para revolucionar o mundo dos carros esportivos de luxo. Aurora projects é a sua conexão com o passado, presente e o seu passo futuro.</p> 
+                            <h2 id="esquerda">Passado</h2>
+                            <p id="paragrafoEsquerda1">Aurora é sinônimo de elegância, pureza e sofisticação, isso explica o seu nome. Totalmente reformulada, chegamos para revolucionar o mundo dos carros esportivos de luxo. Aurora projects é a sua conexão com o passado, presente e o seu passo futuro.</p> 
+                            </div>
+
+                            <div class="imagemEsquerda">
+                                <img src="../images/Vetores/AURORA LOGO ANTIGA.png" alt="Logo Antiga Aurora">
                             </div>
 
                             <div class="direita">
                                 <h2 id="direita">Presente</h2>
-                                <p>Um dos fenômenos mais incríveis e belos do planeta, Aurora é a entrada para a próxima revolução tecnológica. Não tenha medo, o futuro te espera. </p>
+                                <p id="paragrafoDireita">Um dos fenômenos mais incríveis e belos do planeta, Aurora é a entrada para a próxima revolução tecnológica. Não tenha medo, o futuro te espera. </p>
+                            </div>
+
+                            <div class="imagemDireita">
+                                <img src="../images/Vetores/AURORA NOVA LOGO.png" alt="Nova Logo Aurora">
                             </div>
 
                             <div class="esquerda">
                               
-                            <h2 id="">Futuro</h2>
-                            <p>E aqui estamos, já tomou a sua decisão? Pegue a nossa mão, te guiaremos pelas estradas da tecnologia. Welcome to the future !</p>  
+                            <h2 id="esquerda2">Futuro</h2>
+                            <p id="paragrafoEsquerda2">E aqui estamos, já tomou a sua decisão? Pegue a nossa mão, te guiaremos pelas estradas da tecnologia. Welcome to the future !</p>  
+                            
+                            <div class="imagemEsquerda2">
+                                <img src="../images/Vetores/AURORA ANTIGA X AURORA NOVA.png" alt="Antiga x Nova">
                             </div>
+
+                        </div>
 
                         </div>
             </div>
@@ -156,20 +169,18 @@
 
     <footer id="myFooter"> <!--RODAPÉ-->
         <section id="contato">
-                <div class="container">
+                <div class="footerInformation">
                     <ul>
-                        <li><a href="#sobre">Informações</a></li>
-                        <li><a href="https://programadorviking.com.br/">Contato</a></li>
-                        <li><a href="https://programadorviking.com.br/">Blog</a></li>
-                        <li><a href="https://bit.ly/front-end-curso-completo-promocao-01">Cursos</a></li>
+                        <li><a href="https://github.com/FilipeMagal">Filipe - </a></li>
+                        <li><a href="https://github.com/thauanoliveiraa">Thauan - </a></li>
+                        <li><a href="https://github.com/hangyoficial">Davi</a></li>
                     </ul>
                     <p class="footer-copyright">AURORA 2022 Copyright ©</p>
                 </div>
                 <div class="footer-social">
-                    <a href="https://programadorviking.com.br/" class="social-icons"><i class="fa fa-facebook"></i></a>
-                    <a href="https://programadorviking.com.br/" class="social-icons"><i class="fa fa-instagram"></i></a>
-                    <a href="https://programadorviking.com.br/" class="social-icons"><i class="fa fa-youtube"></i></a>
-                    <a href="https://programadorviking.com.br/" class="social-icons"><i class="fa fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/thx0liver" class="social-icons"><i class="fa fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/xtfilipe_lima" class="social-icons"><i class="fa fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/davixbarreto" class="social-icons"><i class="fa fa-instagram"></i></a>
                 </div>
         </section>
     </footer>
