--- a/style/sliderTeste.html
+++ b/style/sliderTeste.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="styleTeste.css">
 </head>
 <body>
 
     <div class="apresentacaoCarros" id="carrosApr">
-        <h1>Ferrari Roma</h1>
+        <h1 class="nomeCarro">Ferrari Roma</h1>
+
         <ul class="slider" id="modelosCarros">
             <li>
                 <input type="radio" id="slide1" name="slide" checked>
@@ -28,7 +30,17 @@
                 <img src="images/Modelos dos carros/Carros/Ferrari/Roma/RomaTras.jpg" class="modelosCarros"/>
             </li>
         </ul>
-        <p></p>
+        <div class="especificacoes">
+            <p class="especificacao1">Disposição dos cilindros :	Motor em V
+            </p>
+            <p class="especificacao2">Modificação do motor :	3.9 V8(620 Cv) DCT</p>
+            <p class="especificacao3">Número de cilindros :	8 cilindros</p>
+        </div>
+        <a href="" id="valorCarro">
+            <h2 class="valorCarro">R$ 50.000,00</h2>
+        </a>
     </div>
+
+    
 </body>
 </html>
