--- a/index/index.html
+++ b/index/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../style/style.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../3-modelos-de-rodape_-_programador-viking/assets/css/footer-white.css">
+    <link rel="stylesheet" href="../style/footer.css">
 </head>
 <body>
     <header> <!--CABEÇALHO-->
@@ -51,7 +51,7 @@
         <section id="video">
         <h1 class="h1Video">THIS IS...</h1>
             <div id="editVideo">
-                <video src="../video/Aurora Apresentation.mp4" autoplay loop controls width="700px"></video>
+                <video src="../video/Aurora Apresentation.mp4" loop controls autoplay width="700px"></video>
             </div>
         </section>
 
