--- a/indexModels/1linha/indexFerrari.html
+++ b/indexModels/1linha/indexFerrari.html
@@ -7,6 +7,7 @@
     <title>Aurora Models Ferrari</title>
     <link rel="stylesheet" href="../../style/style.css">
     <link rel="stylesheet" href="../../style/styleTeste.css">
+    <link rel="stylesheet" href="../../style/styleDiferent.css">
 </head>
 <body>
     <div class="classMenu" id="menu">
